--- a/style.css
+++ b/style.css
@@ -46,7 +46,8 @@ body * {
 }
 
 #container {
-  width: 360px;
+  width: 100%;
+  max-width: 588px;
   margin: 56px auto 0px; /* funciona como um relógio da esquerda para a direita*/
   padding: 0 24px;
 
