--- a/style.css
+++ b/style.css
@@ -38,6 +38,7 @@ body {
   /* Agrupa tudo em uma só propriedade: shorthand ou atalho */
   /* Sintaxe -> background: color image repeat position/size */
   background: var(--br-url) no-repeat top center/cover;
+  height: 100vh;
 }
 
 body * {
@@ -184,4 +185,15 @@ footer {
   padding: 24px 0;
   text-align: center;
   font-size: 14px;
+}
+
+/* media queries */
+@media (min-width: 700px) {
+  :root {
+    --br-url: url(./assets/assets/bg-desktop.jpg);
+  }
+
+  .light {
+    --br-url: url(./assets/assets/bg-desktop-light.jpg);
+  }
 }
